src/app/[lng]/globals.css
/* ... */
.page-number.active{
    background-color: var(--trinity-blue);
    color: var(--trinity-white);

}
.pagination-btn:hover{
    border: none;
}
.pagination-btn:disabled{
 opacity: 0.4;
 background-color: var(--trinity-white);
}


/* Latest News Article */
.article-title {
  font-size: 16px;
  font-weight: 700;
  line-height: 19.5px;
  text-align: left;
  border-bottom: 1px solid #0000000a;
  padding-bottom: 20px;
  padding-top: 25px;
}




/* Article Grid */
.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
  gap: 30px;
  margin-bottom: 16px;
}

.grid-item {
  position: relative;
  border-radius: 5px;
  overflow: hidden;
  background: #fff;
  text-align: center;
}

.article .featured-image {
  width: 100%;
  height: 390px;
  object-fit: cover;
  /* object-position: left; */
}
.article_date {
  padding: 6px 12px 9px 12px;
  gap: 0px;
  border-radius: 2px;
  background-color: var(--trinity-blue);
  color: var(--trinity-white);
  position: absolute;
  top: 4%;
  left: 8%;
}
.rt-holder {
  padding-top: 10px;
  padding-bottom: 25px;
  padding-left: 20px;
  padding-right: 20px;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.card-bottom-elements {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.category {
  font-size: 14px;
  font-weight: 400;
  line-height: 17.07px;
  text-align: left;
  color: var(--trinity-blue);
}

/* sINGLE POST */
.wp-block-heading{
  font-size: 30px;
}

 .play-video, .view-image{
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
    
}


.view-image{
    opacity: 0;
    width: 60px;
    height: 60px;
    z-index: 10;
}
.image-grid:hover .view-image{
    opacity: 1;
} 


.right-header h2{
   
font-size: 36px;
font-weight: 700;
line-height: 43.88px;
text-align: left;
color: var(--trinity-dark);

}

/* Our leadership styles */
.team-member-photo{
        height: 330px;
        object-fit: cover;
        object-position: center 10%;
        width: 100%;
    }

  .team-member-wrapper {
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      gap: 30px;
      
    }



    @media(max-width: 992px) AND (min-width: 768px){
        .histort-content-holder, .image-holder {
            width: 50%;
        }
        .our-values-wrapper .icon-box{
            transform: translateY(50px);
        }
        .inner-container, .our-products-section {
            padding-top: 40px;
            padding-bottom: 40px;
        }
        .strategies-section .grid-container, .team-member-wrapper{
            grid-template-columns: repeat(2, 1fr)!important;
        }
        .executive-management-wrapper{
            padding-top: 40px!important;
            padding-bottom: 40px!important;
        }
        .second-container{
            gap: 20px!important;
        }
    }
    
    /* .team-member-info{
      display: flex;
      flex-direction: column;
      gap: 3px;
    } */


.member-name{
    font-size: 20px;
    font-weight: 700;
    line-height: 24.38px;
    text-align: left;
    
}


    
    .team-member-details{
       display: flex;
       justify-content: space-between;
       align-items: center;
      padding: 30px 20px 30px 20px;
      gap: 10px;
          min-height: 125px;
      opacity: 0px;
      background-color: var(--trinity-white);
    }
    
    .team-member-details .view-member-desc{
        padding-right: 20px;
        cursor: pointer;
    }
    @media (min-width: 1024px) {
        .single-team-member:hover .view-member-desc{
        opacity: 1;
      }
      .team-member-details .view-member-desc{
       
        opacity: 0;
       
    }
    }
    
.wp-block-image img{
  width: 100%;
  object-fit: cover;
}




    /* A team member popup styles */
    .executive-management-wrapper h2 {
    font-size: 36px;
    font-weight: 700;
    line-height: 43.88px;
    margin-bottom: 0;
}
    .a-member-desc{
        display: flex;
        column-gap: 50px;
        padding: 30px;
    }
    @media (max-width: 768px) {
        .a-member-desc{
            flex-direction: column;
            padding: 0!important;
        }
        .a-member-desc .text-content, .a-member-desc .a-member-image{
            width: 100%!important;
        }
        .values-section .inner-contentWrapper{
            padding-left: 15px;
            padding-right: 15px;
        }
        .inner-wrapper, .child-item-wrapper {
            padding-top: 50px;
        }
        .inner-wrapper .heading, .child-item-wrapper h1{
            line-height: 1.3em!important;
        }
        .history-image{
          height: 300px;
          object-fit: cover;
        }
    }
    .a-member-desc .text-content {
        width: 60%;
    }
    .a-member-desc .a-member-image{
        width: 40%;
    }
    .a-member-desc .a-member-image img{
        min-height: 300px;
        object-fit: cover;

    }
    
    .member-name, .member-post{
        color: var(--trinity-dark);
        margin-bottom: auto;
    }
   
    
    .member-post{
       
    font-size: 16px;
    font-weight: 500;
    line-height: 19px;
    text-align: left;
    
    
    }
    .general-button {
        display: flex;
        
        padding-top: 30px;
    }
    .general-button .hover-green{
        font-size: 16px;
        font-weight: 400;
        line-height: 19.5px;
        text-align: center;
        text-decoration: none;
        background-color: var(--trinity-blue);
        border-radius: 5px;
        padding: 16px 30px 16px 30px;
        color: var(--trinity-white);
        display: flex;
        gap: 10px;
        ;
    }
    
    .general-button .hover-green:hover{
        background-color: var(--trinity-green);
    }

